--- a/WebApplication1/Views/Category/Add.cshtml
+++ b/WebApplication1/Views/Category/Add.cshtml
@@ -9,5 +9,5 @@
 <form asp-action="Add" class="form-group" method="post">
     <label asp-for="CategoryName"></label>
     <input asp-for="CategoryName" class="form-control mt-2"/>
-    <button class="btn btn-primary mt-2">Kaydet</button>
+    <button class="btn btn-succes mt-2">Ekle</button>
 </form>
