--- a/WebApplication1/Views/Product/Index.cshtml
+++ b/WebApplication1/Views/Product/Index.cshtml
@@ -27,6 +27,12 @@
             <td>@p.SalePrice</td>
             <td>@p.Category.CategoryName</td>
             <td>@p.ProductImage</td>
+            <td>
+                <form asp-action="Delete" asp-controller="Product" method="post">
+                    <input type="hidden" name="id" value="@p.Id" />
+                    <button type="submit" class="btn btn-danger">Sil</button>
+                </form>
+            </td>
         </tr>
     }
 </table>
