--- a/WebApplication1/Views/Product/Index.cshtml
+++ b/WebApplication1/Views/Product/Index.cshtml
@@ -33,6 +33,9 @@
                     <button type="submit" class="btn btn-danger">Sil</button>
                 </form>
             </td>
+            <td>
+                <a asp-controller="Product" asp-action="Update" asp-route-id="@p.Id" class="btn btn-success">Güncelle</a>
+            </td>
         </tr>
     }
 </table>
